# demo-files-fastapi

./: .gitignore  README.md  alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 4a1c00820ff4_.py  641537c82f82_.py
core/: database.py  settings.py
media/: __init__.py  router.py
posts/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
utils/: annotations.py  dependencies.py  repositories.py
