[project]
name = "learn-media-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.16.5",
    "black>=25.1.0",
    "fastapi[standard]>=0.116.1",
    "sqlalchemy[asyncio]>=2.0.43",
]
